--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:site_name" content="soojubm" />
-    <meta property="og:url" content="https://soojubm.github.io" />
+    <meta property="og:url" content="" />
     <meta property="og:title" content="수줍이의 포트폴리오" />
     <meta property="og:image" content="/images/open-graph.png" />
     <meta property="og:image:width" content="1200">
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@" />
     <meta name="twitter:creator" content="soojubm" />
-    <meta name="twitter:url" content="https://soojubm.github.io" />
+    <meta name="twitter:url" content="" />
     <meta name="twitter:title" content="수줍이의 포트폴리오" />
     <meta name="twitter:description" content="부끄러우니까 보지마요." />
     <meta name="twitter:image" content="https://example.com/image.jpg">
