refector: tag structure

--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
             원하는 페이지를 입력해서 빠르게 찾아보세요. 
             <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
           </p>
+          <figure class="home-tabpanel-section-media">
+          </figure>
         </div>
       </section>
 
@@ -196,44 +198,20 @@
             이제 시험별로 킬러 문제를 골라 학습지를 만들어 보세요.
             <span class="linebreak-desktop">시험에서 기하, 미적분 등 원하는 단원의 문제만 골라 학습지를 만들어보세요.</span>
           </p>
-          <div class="tabpanel1-3-wrap">
-            <figure class="home-tabpanel-section-media tabpanel1-3-o">
-              <img src="public/images/tabpanel1-section3-o.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-o">
-              <img src="public/images/tabpanel1-section3-o.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-o">
-              <img src="public/images/tabpanel1-section3-o.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-o">
-              <img src="public/images/tabpanel1-section3-o.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-o">
-              <img src="public/images/tabpanel1-section3-o.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-o">
-              <img src="public/images/tabpanel1-section3-o.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-x">
-              <img src="public/images/tabpanel1-section3-x.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-x">
-              <img src="public/images/tabpanel1-section3-x.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-x">
-              <img src="public/images/tabpanel1-section3-x.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-x">
-              <img src="public/images/tabpanel1-section3-x.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-x">
-              <img src="public/images/tabpanel1-section3-x.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel1-3-x">
-              <img src="public/images/tabpanel1-section3-x.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel1-3-wrap">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+          </figure>
         </div>
       </section>
 
@@ -249,10 +227,10 @@
             <span class="linebreak-desktop">만들고, 학습지와 교재를 만들면서 즐겨찾는 문제를 불러와 추가해보세요.</span>
           </p>
 
-          <div class="tabpanel1-4-wrap">
-            <figure class="home-tabpanel-section-media">
+          <div class="home-tabpanel-section-media tabpanel1-4-wrap">
+            <div class="tabpanel1-4-wrap-inbox">
               <div class="before-blur"></div>
-              <div class="animation" style="position:absolute;">
+              <div class="viewer">
                 <div class="question">
                   <img src="public/images/tabpanel1-section4-1.png" alt="">
                   <img class="bookmark" src="public/images/tabpanel1-section4-bookmark.png" alt="">
@@ -275,8 +253,8 @@
                 </div>
               </div>
               <div class="after-blur"></div>
-            </figure>
-          </div>
+            </div>
+          </figure>
         </div>
       </section>
     </main>
@@ -284,6 +262,7 @@
 
 
     <main class="home-tabpanel" role="tabpanel" aria-hidden="true" data-index="2">
+      <!-- 2-1 -->
       <section class="tabpanel-section align-half js-observer">
         <div class="home-tabpanel-section-inner">
           <h1 class="home-tabpanel-section-title">
@@ -294,14 +273,10 @@
             인공지능 기반 데이터 분석을 통해 유사문제 매칭률을 높였습니다.
             <span class="linebreak-desktop">높아진 매칭률로 보다 정확한 오답 학습지를 만들어보세요.</span>
           </p>
-          <div class="tabpanel2-1-wrap">
-            <figure class="home-tabpanel-section-media tabpanel2-1-1">
-              <img src="public/images/tabpanel2-section1-1.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel2-1-2">
-              <img src="public/images/tabpanel2-section1-2.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel2-1-wrap">
+            <img class="tabpanel2-1-1" src="public/images/tabpanel2-section1-1.png" alt="">
+            <img class=" tabpanel2-1-2" src="public/images/tabpanel2-section1-2.png" alt="">
+          </figure>
         </div>
       </section>
       <section class="tabpanel-section align-half js-observer" style="background-color:var(--blue100);">
@@ -318,6 +293,7 @@
           </figure>
         </div>
       </section>
+
       <!-- 2-3 -->
       <section class="home-tabpanel-section align-centered js-observer">
         <div class="home-tabpanel-section-background">
@@ -354,6 +330,8 @@
           </figure>
         </div>
       </section>
+
+      <!-- 2-4 -->
       <section class="home-tabpanel-section align-centered js-observer" style="background-color:var(--blue100);">
         <div class="home-tabpanel-section-inner">
           <h1 class="home-tabpanel-section-title">
@@ -368,6 +346,8 @@
           </figure>
         </div>
       </section>
+
+      <!-- 2-5 -->
       <section class="tabpanel-section align-half js-observer">
         <div class="home-tabpanel-section-inner">
           <h1 class="home-tabpanel-section-title">
@@ -379,17 +359,12 @@
             같은 반 또는 학년 학생들의 원클릭 보고서를 한번에 만들어 보세요.
             <span class="linebreak-desktop">학습지로 시험을 본 후에 학생들의 등수와 평균을 원클릭 보고서로 뽑아보세요. </span>
           </p>
-          <div class="tabpanel2-5-wrap">
-            <figure class="home-tabpanel-section-media tabpanel2-5-1">
-              <img src="public/images/tabpanel2-section5-1.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel2-5-2">
-              <img src="public/images/tabpanel2-section5-2.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel2-5-wrap">
+            <img class="tabpanel2-5-1" src="public/images/tabpanel2-section5-1.png" alt="">
+            <img class="tabpanel2-5-2" src="public/images/tabpanel2-section5-2.png" alt="">
+          </figure>
         </div>
       </section>
-
     </main>
 
 
@@ -404,14 +379,10 @@
             학년별, 재원/퇴원 상태로 학생들을 구분하여 볼 수 있고
             <span class="linebreak-desktop">정렬 기준을 바꾸거나 이름을 검색해서 원하는 학생을 더 빠르게 찾을 수 있어요.</span>
           </p>
-          <div class="tabpanel3-1-wrap">
-            <figure class="home-tabpanel-section-media tabpanel3-1-1">
-              <img src="public/images/tabpanel3-section1-1.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel3-1-2">
-              <img src="public/images/tabpanel3-section1-2.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel3-1-wrap">
+            <img class="tabpanel3-1-1" src="public/images/tabpanel3-section1-1.png" alt="">
+            <img class="tabpanel3-1-2" src="public/images/tabpanel3-section1-2.png" alt="">
+          </figure>
         </div>
       </section>
       
@@ -425,14 +396,10 @@
             학년별, 재원/퇴원 상태로 학생들을 구분하여 볼 수 있고
             <span class="linebreak-desktop">정렬 기준을 바꾸거나 이름을 검색해서 원하는 학생을 더 빠르게 찾을 수 있어요.</span>
           </p>
-          <div class="tabpanel3-2-wrap">
-            <figure class="home-tabpanel-section-media tabpanel3-2-1">
-              <img src="public/images/tabpanel3-section2-1.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel3-2-2">
-              <img src="public/images/tabpanel3-section2-2.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel3-2-wrap">
+            <img class="tabpanel3-2-1" src="public/images/tabpanel3-section2-1.png" alt="">
+            <img class="tabpanel3-2-2" src="public/images/tabpanel3-section2-2.png" alt="">
+          </figure>
         </div>
       </section>
 
@@ -464,17 +431,11 @@
             엑셀 양식을 다운받아서 학생들의 필수 정보를 입력하고,
             <span class="linebreak-desktop">등록하기 버튼 한 번으로 손쉽게 등록해보세요.</span>
           </p>
-          <div class="tabpanel3-4-wrap">
-            <figure class="home-tabpanel-section-media tabpanel3-4-1">
-              <img src="public/images/tabpanel3-section4-1.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel3-4-2">
-              <img src="public/images/tabpanel3-section4-2.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel3-4-3">
-              <img src="public/images/tabpanel3-section4-3.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel3-4-wrap">
+            <img class="tabpanel3-4-1" src="public/images/tabpanel3-section4-1.png" alt="">
+            <img class="tabpanel3-4-2" src="public/images/tabpanel3-section4-2.png" alt="">
+            <img class="tabpanel3-4-3" src="public/images/tabpanel3-section4-3.png" alt="">
+          </figure>
         </div>
       </section>
     </main>
@@ -491,17 +452,11 @@
             이제 등록된 학생에게 자동으로 아이디가 발급되어요. 
             <span class="linebreak-desktop">또한 클릭 한 번으로 학생과 학부모에게 문자로 아이디를 바로 전송할 수 있어요.</span>
           </p>
-          <div class="tabpanel4-1-wrap">
-            <figure class="home-tabpanel-section-media tabpanel4-1-1">
-              <img src="public/images/tabpanel4-section1-1.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel4-1-2">
-              <img src="public/images/tabpanel4-section1-2.png" alt="">
-            </figure>
-            <figure class="home-tabpanel-section-media tabpanel4-1-3">
-              <img src="public/images/tabpanel4-section1-3.png" alt="">
-            </figure>
-          </div>
+          <figure class="home-tabpanel-section-media tabpanel4-1-wrap">
+            <img class="tabpanel4-1-1" src="public/images/tabpanel4-section1-1.png" alt="">
+            <img class="tabpanel4-1-2" src="public/images/tabpanel4-section1-2.png" alt="">
+            <img class="tabpanel4-1-3" src="public/images/tabpanel4-section1-3.png" alt="">
+          </figure>
         </div>
       </section>
 
@@ -515,19 +470,18 @@
             시중 교재와 자체 교재 모두 학습지처럼 정답을 비공개 할 수 있습니다. 
             <span class="linebreak-desktop">학생들이 채점하기 전에 답을 볼 수 없도록 정답을 비공개해보세요.</span>
           </p>
-
-          <div class="tabpanel4-2-wrap">
+          <figure class="home-tabpanel-section-media tabpanel4-2-wrap">
             <!-- <figure class="home-tabpanel-section-media tabpanel4-2-1">
               <img src="public/images/tabpanel4-section2-1.png" alt="">
             </figure>
             <figure class="home-tabpanel-section-media tabpanel4-2-2">
               <img src="public/images/tabpanel4-section2-2.png" alt="">
             </figure> -->
-            <picture class="home-tabpanel-section-media">
+            <picture>
               <source media="(max-width: 799px)" srcset="public/images/tabpanel4-section2-1-mobile.png">
               <img src="public/images/tabpanel4-section2-1.png" alt="">
             </picture>
-          </div>
+          </figure>
         </div>
       </section>
 
@@ -541,8 +495,8 @@
             실제 학습지를 푸는 것처럼 한 문제씩 집중해서 문제를 풀 수 있고, 모르는 문제로 
             체크한 문제는 선생님 화면에서 확인할 수 있어요.
           </p>
-          <figure class="home-tabpanel-section-media tabpanel4-3-1">
-            <img src="public/images/tabpanel4-section3-1.png" alt="">
+          <figure class="home-tabpanel-section-media">
+            <img class="tabpanel4-3-1" src="public/images/tabpanel4-section3-1.png" alt="">
           </figure>
         </div>
       </section>
@@ -557,8 +511,8 @@
             최근 일주일간의 숙제를 보여주어 학생들이 놓치지 않고 숙제를 체크할 수 있어요.
             <span class="linebreak-desktop">채점한 숙제는 점수가 표시되면서 완료 체크도 되요.</span>
           </p>
-          <figure class="home-tabpanel-section-media tabpanel4-4-1">
-            <img src="public/images/tabpanel4-section4-1.png" alt="">
+          <figure class="home-tabpanel-section-media">
+            <img class="tabpanel4-4-1" src="public/images/tabpanel4-section4-1.png" alt="">
           </figure>
         </div>
       </section>
