--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
     <script type="module" src="public/javascripts/index.js"></script>
   </head>
-  <body class="js-tab">
+  <body>
     <noscript>This website requires JavaScript.</noscript>
     
     <!-- <aside class="browser js-browser" role="complementary">
@@ -96,9 +96,9 @@
         <a class="navbar-menu-item" href="#design">사용신청</a>
       </div>
     </nav>
-    <div style="height:var(--navbar-height);"></div>
+    <div class="js-navbar-backdrop" style="height:var(--navbar-height);"></div>
 
-    <main>
+    <main class="js-tab">
       <section class="hero js-hero js-observer">
         <div class="hero-inner">
           <h1 class="hero-title">매쓰플랫이 새로워졌어요!
@@ -416,7 +416,7 @@
         </article>
   
         <article class="home-tabpanel-section align-half background js-observer" style="background-color:var(--navy);">
-          <div class="home-tabpanel-section-background">
+          <div class="home-tabpanel-section-background tab3-4">
             <img src="public/images/tabpanel3-section4-bg.png" alt="">
           </div>
           <div class="home-tabpanel-section-inner">
@@ -555,14 +555,6 @@
       </div>
     </footer>
 
-      <style>
-
-    #my-video {
-        max-width: 100%;
-        margin: 0 auto;
-    }
-      </style>
-
     <!-- <script>
       window.addEventListener('online',  detectOnline)
       window.addEventListener('offline',  detectOnline)
@@ -577,43 +569,5 @@
         // window.alert(isOnline ? 'online' : 'offline')
       }
     </script> -->
-
-    <script>
-      function isColorInRange(expectedColor, givenColor) {
-          const THRESHOLD = 40;
-          for (var i = 0; i < 3; i++) {
-              if (((expectedColor[i] - THRESHOLD) > givenColor[i]) 
-               || ((expectedColor[i] + THRESHOLD) < givenColor[i])) {
-                  return false;
-              }
-          }
-          return true;
-      }
-
-      function setVideoBgColor(vid, nativeColor) {
-          if (vid) {
-              var vidBg = vid.parentElement;
-              if (vidBg) {
-                  // draw first pixel of video to a canvas
-                  // then get pixel color from that canvas
-                  var canvas = document.createElement("canvas");
-                  canvas.width = 1;
-                  canvas.height = 1;
-                  var ctx = canvas.getContext("2d");
-                  ctx.drawImage(vid, 0, 0, 1, 1);
-
-                  var p = ctx.getImageData(0, 0, 1, 1).data;
-                  //console.log("rgb(" + p[0] + "," + p[1] + "," + p[2] + ")");
-                  if (isColorInRange(nativeColor, p)) {        
-                      vidBg.style.backgroundColor = "rgb(" + p[0] + "," + p[1] + "," + p[2] + ")";
-                  }
-              }
-          }
-      }
-
-      function setVideoBgColorDelayed(vid, nativeColor) {
-          setTimeout(setVideoBgColor, 100, vid, nativeColor);
-      }
-  </script>
   </body>
 </html>
