--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <img src="public/images/tabpanel4-section2-2.png" alt="">
               </figure> -->
               <picture>
-                <source media="(max-width: 799px)" srcset="public/images/tabpanel4-section2-1-mobile.png">
+                <source media="(min-width: 800px)" srcset="public/images/tabpanel4-section2-1-mobile.png">
                 <img src="public/images/tabpanel4-section2-1.png" alt="">
               </picture>
             </figure>
