--- a/index.html
+++ b/index.html
@@ -492,12 +492,13 @@
               실제 학습지를 푸는 것처럼 한 문제씩 집중해서 문제를 풀 수 있고, 모르는 문제로 
               체크한 문제는 선생님 화면에서 확인할 수 있어요.
             </p>
-            <figure class="home-tabpanel-section-media">
+            <figure class="home-tabpanel-section-media tabpanel4-3-wrap">
               <img class="tabpanel4-3-1" src="public/images/tabpanel4-section3-1.png" alt="">
             </figure>
           </div>
         </article>
   
+        <!-- 4-3 -->
         <article class="home-tabpanel-section align-centered js-observer" style="background-color:#fafafa;">
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
@@ -508,8 +509,11 @@
               최근 일주일간의 숙제를 보여주어 학생들이 놓치지 않고 숙제를 체크할 수 있어요.
               <span class="linebreak-desktop">채점한 숙제는 점수가 표시되면서 완료 체크도 되요.</span>
             </p>
-            <figure class="home-tabpanel-section-media">
-              <img class="tabpanel4-4-1" src="public/images/tabpanel4-section4-1.png" alt="">
+            <figure class="home-tabpanel-section-media tabpanel4-4-wrap">
+              <picture class="tabpanel4-4-1">
+                <source media="(max-width: 800px)" srcset="public/images/tabpanel4-section4-1-mobile.png">
+                <img src="public/images/tabpanel4-section4-1.png" alt="">
+              </picture>
             </figure>
           </div>
         </article>
