--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             매쓰플랫팀이 선생님들의 의견들을 모아 매쓰플랫을 개선하였어요.
             <span class="linebreak-desktop">가장 먼저 새로운 매쓰플랫을 사용하실 학원을 모집합니다!</span>
           </p>
-          <a class="hero-cta" href="">지금 바로 신청하러 가기 ></a>
+          <a class="hero-cta" href="">신청 방법 보러 가기 ></a>
           <div class="hero-object-group">
             <div class="hero-object-group-inner">
               <figure class="hero-object1"><img src="public/images/hero-object1.png" alt=""></figure>
