--- a/index.html
+++ b/index.html
@@ -98,28 +98,30 @@
     </nav>
     <div class="js-navbar-backdrop" style="height:var(--navbar-height);"></div>
 
-    <main class="js-tab">
-      <section class="hero js-hero js-observer">
-        <div class="hero-inner">
-          <h1 class="hero-title">매쓰플랫이 새로워졌어요!
-            <span class="linebreak-desktop"><em>더 쉽고 편해진</em> 매쓰플랫의</span>
-            첫 사용자가 되어주세요.
-          </h1>
-          <p class="hero-description">
-            매쓰플랫팀이 선생님들의 의견들을 모아 매쓰플랫을 개선하였어요.
-            <span class="linebreak-desktop">가장 먼저 새로운 매쓰플랫을 사용하실 학원을 모집합니다!</span>
-          </p>
-          <a class="hero-cta" href="">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt=""></a>
-          <div class="hero-object-group">
-            <div class="hero-object-group-inner">
-              <figure class="hero-object1"><img src="public/images/hero-object1.png" alt=""></figure>
-              <figure class="hero-object2"><img src="public/images/hero-object2.png" alt=""></figure>
-              <figure class="hero-object3"><img src="public/images/hero-object3.png" alt=""></figure>
-            </div>
+    <section class="hero js-hero js-observer">
+      <div class="hero-inner">
+        <h1 class="hero-title">매쓰플랫이 새로워졌어요!
+          <span class="linebreak-desktop"><em>더 쉽고 편해진</em> 매쓰플랫의</span>
+          첫 사용자가 되어주세요.
+        </h1>
+        <p class="hero-description">
+          매쓰플랫팀이 선생님들의 의견들을 모아 매쓰플랫을 개선하였어요.
+          <span class="linebreak-desktop">가장 먼저 새로운 매쓰플랫을 사용하실 학원을 모집합니다!</span>
+        </p>
+        <a class="hero-cta" href="">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt=""></a>
+        <div class="hero-object-group">
+          <div class="hero-object-group-inner">
+            <figure class="hero-object1"><img src="public/images/hero-object1.png" alt=""></figure>
+            <figure class="hero-object2"><img src="public/images/hero-object2.png" alt=""></figure>
+            <figure class="hero-object3"><img src="public/images/hero-object3.png" alt=""></figure>
           </div>
         </div>
-      </section>
-  
+      </div>
+    </section>
+
+
+    <main class="js-tab">
+
       <section class="home-cta js-home-cta">
         <a class="home-cta-button" href="">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt=""></a>
       </section>
@@ -307,8 +309,11 @@
               <span class="linebreak-desktop">회차별 채점 기록도 삭제되지 않고 모두 저장되어 확인할 수 있어요. </span>
             </p>
             <figure class="home-tabpanel-section-media">
-              
-              <div style="width:200px;">
+
+              <div>
+
+              </div>
+              <div>
                 <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                   <circle class="donut-hole" cx="20" cy="20" r="15" fill="#fff"></circle>
                   <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
