--- a/index.html
+++ b/index.html
@@ -187,8 +187,21 @@
   
         <!-- 1-3 -->
         <article class="home-tabpanel-section align-centered background js-observer" style="background-color:var(--navy);">
-          <div class="home-tabpanel-section-background">
+          <div class="home-tabpanel-section-background tabpanel1-3-background">
             <img src="public/images/tabpanel1-section3-bg.png" alt="">
+            
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+            <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
           </div>
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
@@ -200,18 +213,9 @@
               <span class="linebreak-desktop">시험에서 기하, 미적분 등 원하는 단원의 문제만 골라 학습지를 만들어보세요.</span>
             </p>
             <figure class="home-tabpanel-section-media tabpanel1-3-wrap">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
+              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <source src="public/videoes/tabpanel3-test.mp4" type="video/mp4">
+              </video>
             </figure>
           </div>
         </article>
@@ -261,6 +265,21 @@
       </section>
   
       <section class="home-tabpanel" role="tabpanel" aria-hidden="true" data-index="2">
+        <!-- 2-0 -->
+        <article class="home-tabpanel-section align-half js-observer">
+          <div class="home-tabpanel-section-inner">
+            <h1 class="home-tabpanel-section-title">
+              추가
+            </h1>
+            <p class="home-tabpanel-section-description">
+              추가
+            </p>
+            <figure class="home-tabpanel-section-media tabpanel2-0-wrap">
+              <img class="tabpanel2-0-1" src="public/images/tabpanel2-section0-1.png" alt="">
+            </figure>
+          </div>
+        </article>
+
         <!-- 2-1 -->
         <article class="home-tabpanel-section align-half js-observer">
           <div class="home-tabpanel-section-inner">
@@ -383,7 +402,6 @@
             </p>
             <figure class="home-tabpanel-section-media tabpanel3-1-wrap">
               <img class="tabpanel3-1-1" src="public/images/tabpanel3-section1-1.png" alt="">
-              <img class="tabpanel3-1-2" src="public/images/tabpanel3-section1-2.png" alt="">
             </figure>
           </div>
         </article>
