fix: description color and tab indicator height

--- a/index.html
+++ b/index.html
@@ -309,6 +309,26 @@
               <span class="linebreak-desktop">학생별로 학습지나 교재를 얼마나 풀었고, 맞았는지 한눈에 확인할 수 있어요.</span>
             </p>
             <figure class="home-tabpanel-section-media">
+              <div class="users">
+                <div class="user1">
+                  <img src="public/images/tabpanel2-section2-user1.png" alt="">
+                </div>
+                <div class="user2">
+                  <img src="public/images/tabpanel2-section2-user2.png" alt="">
+                </div>
+                <div class="user3">
+                  <img src="public/images/tabpanel2-section2-user3.png" alt="">
+                </div>
+                <div class="user4">
+                  <img src="public/images/tabpanel2-section2-user4.png" alt="">
+                </div>
+                <div class="user5">
+                  <img src="public/images/tabpanel2-section2-user5.png" alt="">
+                </div>
+                <div class="user6">
+                  <img src="public/images/tabpanel2-section2-user6.png" alt="">
+                </div>
+              </div>
             </figure>
           </div>
         </article>
