--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
           </div>
         </article>
   
+        <!-- 2-2 -->
         <article class="home-tabpanel-section align-half js-observer" style="background-color:var(--blue100);">
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
@@ -308,10 +309,30 @@
               어떤 학생이 숙제를 했고, 어떤 학생이 하지 않았는지 한눈에 파악해보세요.
               <span class="linebreak-desktop">학생별로 학습지나 교재를 얼마나 풀었고, 맞았는지 한눈에 확인할 수 있어요.</span>
             </p>
-            <figure class="home-tabpanel-section-media">
+            <figure class="home-tabpanel-section-media tabpanel2-2-wrap">
+              
+              <div class="tag1">
+                <img src="public/images/tabpanel2-section2-tag1.png" alt="">
+              </div>
               <div class="users">
                 <div class="user1">
                   <img src="public/images/tabpanel2-section2-user1.png" alt="">
+                  <div class="donut-wrap">
+                    <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
+                      <circle class="donut-hole" cx="20" cy="20" r="15" fill="#fff"></circle>
+                      <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
+                      <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
+                      <g class="donut-text">
+                        <!-- <text y="40%" transform="translate(0, 1)"> -->
+                        <text y="40%">
+                          <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
+                        </text>
+                        <text y="60%">
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">69%</tspan>   
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
                 </div>
                 <div class="user2">
                   <img src="public/images/tabpanel2-section2-user2.png" alt="">
@@ -328,6 +349,12 @@
                 <div class="user6">
                   <img src="public/images/tabpanel2-section2-user6.png" alt="">
                 </div>
+              </div>
+              <div class="tag2">
+                <img src="public/images/tabpanel2-section2-tag2.png" alt="">
+              </div>
+              <div class="confirm">
+                <img src="public/images/tabpanel2-section2-confirm.png" alt="">
               </div>
             </figure>
           </div>
@@ -347,27 +374,7 @@
               학생이 교재를 한 번 더 풀게 하고 싶을 때 교재 재출제 기능을 사용해보세요.
               <span class="linebreak-desktop">회차별 채점 기록도 삭제되지 않고 모두 저장되어 확인할 수 있어요. </span>
             </p>
-            <figure class="home-tabpanel-section-media">
-
-              <div>
-
-              </div>
-              <div>
-                <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
-                  <circle class="donut-hole" cx="20" cy="20" r="15" fill="#fff"></circle>
-                  <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
-                  <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
-                  <g class="donut-text">
-                    <!-- <text y="40%" transform="translate(0, 1)"> -->
-                    <text y="40%">
-                      <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
-                    </text>
-                    <text y="60%">
-                      <tspan class="donut-percent" x="50%" text-anchor="middle">69%</tspan>   
-                    </text>
-                  </g>
-                </svg>
-              </div>
+            <figure class="home-tabpanel-section-media tabpanel2-3-wrap">
   
             </figure>
           </div>
