--- a/index.html
+++ b/index.html
@@ -300,6 +300,9 @@
   
         <!-- 2-2 -->
         <article class="home-tabpanel-section align-half js-observer" style="background-color:var(--blue100);">
+          <div class="home-tabpanel-section-background">
+            <img src="public/images/tabpanel2-section3-bg.png" alt="">
+          </div>
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
               한 반의 학생들의 진도와 숙제를
@@ -319,7 +322,6 @@
                   <img src="public/images/tabpanel2-section2-user1.png" alt="">
                   <div class="donut-wrap">
                     <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
-                      <circle class="donut-hole" cx="20" cy="20" r="15" fill="#fff"></circle>
                       <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
                       <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
                       <g class="donut-text">
@@ -327,7 +329,7 @@
                         <text y="40%">
                           <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
-                        <text y="60%">
+                        <text y="64%">
                           <tspan class="donut-percent" x="50%" text-anchor="middle">69%</tspan>   
                         </text>
                       </g>
@@ -336,22 +338,98 @@
                 </div>
                 <div class="user2">
                   <img src="public/images/tabpanel2-section2-user2.png" alt="">
+                  <div class="donut-wrap">
+                    <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
+                      <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
+                      <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
+                      <g class="donut-text">
+                        <!-- <text y="40%" transform="translate(0, 1)"> -->
+                        <text y="40%">
+                          <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
+                        </text>
+                        <text y="64%">
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">22%</tspan>   
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
                 </div>
                 <div class="user3">
                   <img src="public/images/tabpanel2-section2-user3.png" alt="">
+                  <div class="donut-wrap">
+                    <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
+                      <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
+                      <circle class="donut-segment" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
+                      <g class="donut-text">
+                        <!-- <text y="40%" transform="translate(0, 1)"> -->
+                        <text y="40%">
+                          <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
+                        </text>
+                        <text y="64%">
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">78%</tspan>   
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
                 </div>
                 <div class="user4">
                   <img src="public/images/tabpanel2-section2-user4.png" alt="">
+                  <div class="donut-wrap">
+                    <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
+                      <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
+                      <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
+                      <g class="donut-text">
+                        <!-- <text y="40%" transform="translate(0, 1)"> -->
+                        <text y="40%">
+                          <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
+                        </text>
+                        <text y="64%">
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">47%</tspan>   
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
                 </div>
                 <div class="user5">
                   <img src="public/images/tabpanel2-section2-user5.png" alt="">
+                  <div class="donut-wrap">
+                    <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
+                      <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
+                      <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
+                      <g class="donut-text">
+                        <!-- <text y="40%" transform="translate(0, 1)"> -->
+                        <text y="40%">
+                          <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
+                        </text>
+                        <text y="64%">
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">70%</tspan>   
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
                 </div>
                 <div class="user6">
                   <img src="public/images/tabpanel2-section2-user6.png" alt="">
+                  <div class="donut-wrap">
+                    <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
+                      <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
+                      <circle class="donut-segment donut-segment-2" cx="20" cy="20" r="15" fill="transparent" stroke-width="3" stroke-dashoffset="29" stroke-dasharray="69 31"></circle>
+                      <g class="donut-text">
+                        <!-- <text y="40%" transform="translate(0, 1)"> -->
+                        <text y="40%">
+                          <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
+                        </text>
+                        <text y="64%">
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">85%</tspan>   
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
                 </div>
               </div>
               <div class="tag2">
                 <img src="public/images/tabpanel2-section2-tag2.png" alt="">
+
               </div>
               <div class="confirm">
                 <img src="public/images/tabpanel2-section2-confirm.png" alt="">
@@ -362,9 +440,6 @@
   
         <!-- 2-3 -->
         <article class="home-tabpanel-section align-centered js-observer">
-          <div class="home-tabpanel-section-background">
-            <img src="public/images/tabpanel2-section3-bg.png" alt="">
-          </div>
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
               채점 기록을 삭제하지 않아도 한 번
