--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </article>
   
         <!-- 1-2 -->
-        <article class="home-tabpanel-section align-half js-observer">
+        <article class="home-tabpanel-section align-half bg-dotted js-observer">
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
               시중교재 학습지를 만들 때
@@ -508,7 +508,7 @@
           </div>
         </article>
         
-        <article class="home-tabpanel-section align-centered js-observer">
+        <article class="home-tabpanel-section align-centered bg-dotted js-observer">
           <div class="home-tabpanel-section-inner">
             <h1 class="home-tabpanel-section-title">
               학생들의 출결 기록을 <em>월간&주간별</em>로
