--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 
     <section class="hero js-hero js-observer">
       <div class="hero-inner">
-        <h1 class="hero-title">매쓰플랫이 새로워졌어요!
-          <span class="linebreak-desktop"><em>더 쉽고 편해진</em> 매쓰플랫의</span>
+        <h1 class="hero-title">
+          매쓰플랫이 새로워졌어요!<br />
+          <em>더 쉽고 편해진</em> 매쓰플랫의<br />
           첫 사용자가 되어주세요.
         </h1>
         <p class="hero-description">
