--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="./build/bundle.js" defer></script> -->
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
     <script type="module" src="public/javascripts/index.js"></script>
+    <script type="module" src="public/javascripts/countup.js"></script>
   </head>
   <body>
     <noscript>This website requires JavaScript.</noscript>
@@ -164,7 +165,7 @@
             </p>
             <figure class="home-tabpanel-section-media">
               <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
-                <source src="public/videoes/tabpanel3-test.mp4" type="video/mp4">
+                <source src="public/videoes/tabpanel1-section1.mp4" type="video/mp4">
               </video>
             </figure>
           </div>
@@ -182,6 +183,9 @@
               <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
             </p>
             <figure class="home-tabpanel-section-media">
+              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4">
+              </video>
             </figure>
           </div>
         </article>
@@ -214,9 +218,7 @@
               <span class="linebreak-desktop">시험에서 기하, 미적분 등 원하는 단원의 문제만 골라 학습지를 만들어보세요.</span>
             </p>
             <figure class="home-tabpanel-section-media tabpanel1-3-wrap">
-              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
-                <source src="public/videoes/tabpanel3-test.mp4" type="video/mp4">
-              </video>
+              <img src="public/images/tabpanel1-section3-1.png" alt="">
             </figure>
           </div>
         </article>
@@ -276,7 +278,7 @@
               추가
             </p>
             <figure class="home-tabpanel-section-media tabpanel2-0-wrap">
-              <img class="tabpanel2-0-1" src="public/images/tabpanel2-section0-1.png" alt="">
+              <img class="tabpanel2-0-1" src="public/images/tabpanel2-section1-1.png" alt="">
             </figure>
           </div>
         </article>
@@ -314,7 +316,6 @@
               <span class="linebreak-desktop">학생별로 학습지나 교재를 얼마나 풀었고, 맞았는지 한눈에 확인할 수 있어요.</span>
             </p>
             <figure class="home-tabpanel-section-media tabpanel2-2-wrap">
-              
               <div class="tag1">
                 <img src="public/images/tabpanel2-section2-tag1.png" alt="">
               </div>
@@ -331,7 +332,9 @@
                           <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
                         <text y="64%">
-                          <tspan class="donut-percent" x="50%" text-anchor="middle">69%</tspan>   
+                          <tspan class="donut-percent" x="50%" text-anchor="middle">
+                            <span class="js-counter">69%</span>
+                          </tspan>   
                         </text>
                       </g>
                     </svg>
@@ -349,7 +352,7 @@
                           <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
                         <text y="64%">
-                          <tspan class="donut-percent" x="50%" text-anchor="middle">22%</tspan>   
+                          <tspan class="donut-percent" x="50%" text-anchor="middle" num="22" time="10000">22%</tspan>   
                         </text>
                       </g>
                     </svg>
@@ -367,7 +370,7 @@
                           <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
                         <text y="64%">
-                          <tspan class="donut-percent" x="50%" text-anchor="middle">78%</tspan>   
+                          <tspan class="donut-percent" x="50%" text-anchor="middle" num="78" time="10000">78%</tspan>   
                         </text>
                       </g>
                     </svg>
@@ -385,7 +388,7 @@
                           <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
                         <text y="64%">
-                          <tspan class="donut-percent" x="50%" text-anchor="middle">47%</tspan>   
+                          <tspan class="donut-percent" x="50%" text-anchor="middle" num="47" time="10000">47%</tspan>   
                         </text>
                       </g>
                     </svg>
@@ -403,7 +406,7 @@
                           <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
                         <text y="64%">
-                          <tspan class="donut-percent" x="50%" text-anchor="middle">70%</tspan>   
+                          <tspan class="donut-percent" x="50%" text-anchor="middle" num="70" time="10000">70%</tspan>   
                         </text>
                       </g>
                     </svg>
@@ -421,7 +424,7 @@
                           <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                         </text>
                         <text y="64%">
-                          <tspan class="donut-percent" x="50%" text-anchor="middle">85%</tspan>   
+                          <tspan class="donut-percent" x="50%" text-anchor="middle" num="85" time="10000"></tspan>   
                         </text>
                       </g>
                     </svg>
@@ -451,7 +454,9 @@
               <span class="linebreak-desktop">회차별 채점 기록도 삭제되지 않고 모두 저장되어 확인할 수 있어요. </span>
             </p>
             <figure class="home-tabpanel-section-media tabpanel2-3-wrap">
-  
+              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <source src="public/videoes/tabpanel2-section3.mp4" type="video/mp4">
+              </video>
             </figure>
           </div>
         </article>
@@ -468,6 +473,9 @@
               <span class="linebreak-desktop">한 반에 포함된 학생들의 오답 학습지를 편하게 만들어 보세요. </span>
             </p>
             <figure class="home-tabpanel-section-media">
+              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <source src="public/videoes/tabpanel2-section4.mp4" type="video/mp4">
+              </video>
             </figure>
           </div>
         </article>
@@ -537,6 +545,9 @@
               <span class="linebreak-desktop">구분하면서 체크해보세요.</span>
             </p>
             <figure class="home-tabpanel-section-media">
+              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <source src="public/videoes/tabpanel3-section3.mp4" type="video/mp4">
+              </video>
             </figure>
           </div>
         </article>
@@ -655,6 +666,9 @@
               <span class="linebreak-desktop">한눈에 쉽게 확인할 수 있어요.</span>
             </p>
             <figure class="home-tabpanel-section-media">
+              <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <source src="public/videoes/tabpanel4-section4.mp4" type="video/mp4">
+              </video>
             </figure>
           </div>
         </article>
