--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <nav class="navbar js-navbar" role="navigation">
       <a class="navbar-logo" href="https://mathflat.com/"><img src="public/images/signature_logo_colored.png" alt=""></a>
       <div class="navbar-menu" role="navigation">
-        <a class="navbar-menu-item is-active" href="#about">새로운 기능</a>
-        <a class="navbar-menu-item" href="#design">사용신청</a>
+        <a class="navbar-menu-item is-active" href="index.html">새로운 기능</a>
+        <a class="navbar-menu-item" href="">사용신청</a>
       </div>
     </nav>
     <div class="js-navbar-backdrop" style="height:var(--navbar-height);"></div>
@@ -110,7 +110,7 @@
           매쓰플랫팀이 선생님들의 의견들을 모아 매쓰플랫을 개선하였어요.
           <span class="linebreak-desktop">가장 먼저 새로운 매쓰플랫을 사용하실 학원을 모집합니다!</span>
         </p>
-        <a class="hero-cta" href="">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt=""></a>
+        <a class="hero-cta js-hero-cta" href="">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt=""></a>
         <div class="hero-object-group">
           <div class="hero-object-group-inner">
             <figure class="hero-object1"><img src="public/images/hero-object1.png" alt=""></figure>
@@ -182,7 +182,7 @@
               원하는 페이지를 입력해서 빠르게 찾아보세요. 
               <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
             </p>
-            <figure class="home-tabpanel-section-media">
+            <figure class="home-tabpanel-section-media tabpanel1-2-wrap">
               <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
                 <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4">
               </video>
