--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
     
         <nav class="home-tablist js-home-tablist" role="tablist">
           <div class="home-tablist-inner">
-            <button class="home-tablist-tab" role="tab" name="project" aria-selected="true" data-index="1">
+            <button class="home-tablist-tab" role="tab" aria-selected="true" data-index="1">
               <small>새로운 기능 1.</small>
               <b>수업 전 학습 자료 준비</b>
             </button>
-            <button class="home-tablist-tab" role="tab" name="webpage" aria-selected="false" data-index="2">
+            <button class="home-tablist-tab" role="tab" aria-selected="false" data-index="2">
               <small>새로운 기능 2.</small>
               <b>수업 중 학습 관리</b>
             </button>
-            <button class="home-tablist-tab" role="tab" name="case-study" aria-selected="false" data-index="3">
+            <button class="home-tablist-tab" role="tab" aria-selected="false" data-index="3">
               <small>새로운 기능 3.</small>
               <b>학원 운영 서포트</b>
             </button>
-            <button class="home-tablist-tab" role="tab" name="blank" aria-selected="false" data-index="4">
+            <button class="home-tablist-tab" role="tab" aria-selected="false" data-index="4">
               <small>새로운 기능 4.</small>
               <b>학생과 학부모 앱</b>
             </button>
@@ -660,9 +660,9 @@
                 학부모앱과 학생앱에서 학생의 최근 4주간의 학습 성과를 그래프로
                 <span class="linebreak-desktop">한눈에 쉽게 확인할 수 있어요.</span>
               </p>
-              <figure class="home-tabpanel-section-media">
+              <figure class="home-tabpanel-section-media tabpanel4-5-wrap">
                 <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
-                  <source src="public/videoes/tabpanel4-section4.mp4" type="video/mp4">
+                  <source src="public/videoes/tabpanel4-section5.mp4" type="video/mp4">
                 </video>
               </figure>
             </div>
