--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 학생별로 학원비를 기록할 수 있고, 기록한 내역을 월별로
                 <span class="linebreak-desktop">구분하면서 체크해보세요.</span>
               </p>
-              <figure class="home-tabpanel-section-media">
+              <figure class="home-tabpanel-section-media tabpanel3-3-wrap">
                 <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
                   <source src="public/videoes/tabpanel3-section3.mp4" type="video/mp4">
                 </video>
@@ -583,7 +583,14 @@
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-1-wrap">
                 <img class="tabpanel4-1-1" src="public/images/tabpanel4-section1-1.png" alt="">
-                <img class="tabpanel4-1-2" src="public/images/tabpanel4-section1-2.png" alt="">
+
+
+                <picture class="tabpanel4-1-2">
+                  <source media="(max-width: 1200px)" srcset="public/images/tabpanel4-section1-2-mobile.png">
+                  <img src="public/images/tabpanel4-section1-2.png" alt="">
+                </picture>
+                
+                
                 <img class="tabpanel4-1-3" src="public/images/tabpanel4-section1-3.png" alt="">
               </figure>
             </div>
