--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <span class="linebreak-desktop">바로 원하는 단원과 유형을 선택할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel1-section1.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -178,7 +178,7 @@
                 <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-2-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -449,7 +449,7 @@
                 <span class="linebreak-desktop">회차별 채점 기록도 삭제되지 않고 모두 저장되어 확인할 수 있어요. </span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-3-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata">
+                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel2-section3.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -468,7 +468,7 @@
                 <span class="linebreak-desktop">한 반에 포함된 학생들의 오답 학습지를 편하게 만들어 보세요. </span>
               </p>
               <figure class="home-tabpanel-section-media">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel2-section4.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -540,7 +540,7 @@
                 <span class="linebreak-desktop">구분하면서 체크해보세요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel3-3-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel3-section3.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -668,7 +668,7 @@
                 <span class="linebreak-desktop">한눈에 쉽게 확인할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-5-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" style="background-color: #fff;">
+                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel4-section5.mp4" type="video/mp4">
                 </video>
               </figure>
