test: 1-1 video masking

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 이제 학습지와 교재를 만들 학교와 학년-학기를 고른 후 
                 <span class="linebreak-desktop">바로 원하는 단원과 유형을 선택할 수 있어요.</span>
               </p>
-              <figure class="home-tabpanel-section-media">
+              <figure class="home-tabpanel-section-media tabpanel1-1-wrap">
                 <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel1-section1.mp4" type="video/mp4">
                 </video>
