feature: get selected tab when refresh

--- a/index.html
+++ b/index.html
@@ -125,22 +125,22 @@
     
         <nav class="home-tablist js-home-tablist" role="tablist">
           <div class="home-tablist-inner">
-            <button class="home-tablist-tab" role="tab" aria-selected="true" data-index="1">
+            <a class="home-tablist-tab" href="#tab1" role="tab" aria-selected="true" data-index="1">
               <small>새로운 기능 1.</small>
               <b>수업 전 학습 자료 준비</b>
-            </button>
-            <button class="home-tablist-tab" role="tab" aria-selected="false" data-index="2">
+            </a>
+            <a class="home-tablist-tab" href="#tab2" role="tab" aria-selected="false" data-index="2">
               <small>새로운 기능 2.</small>
               <b>수업 중 학습 관리</b>
-            </button>
-            <button class="home-tablist-tab" role="tab" aria-selected="false" data-index="3">
+            </a>
+            <a class="home-tablist-tab" href="#tab3" role="tab" aria-selected="false" data-index="3">
               <small>새로운 기능 3.</small>
               <b>학원 운영 서포트</b>
-            </button>
-            <button class="home-tablist-tab" role="tab" aria-selected="false" data-index="4">
+            </a>
+            <a class="home-tablist-tab" href="#tab4" role="tab" aria-selected="false" data-index="4">
               <small>새로운 기능 4.</small>
               <b>학생과 학부모 앱</b>
-            </button>
+            </a>
             <i class="home-tablist-indicator"></i>
           </div>
         </nav>
@@ -347,10 +347,11 @@
                             <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                           </text>
                           <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle" num="22" time="10000">22%</tspan>   
+                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>   
                           </text>
                         </g>
                       </svg>
+                      <span class="js-counter" style="color:var(--red400);">22%</span>
                     </div>
                   </div>
                   <div class="user3">
@@ -365,10 +366,11 @@
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                           </text>
                           <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle" num="78" time="10000">78%</tspan>   
+                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>   
                           </text>
                         </g>
                       </svg>
+                      <span class="js-counter">78%</span>
                     </div>
                   </div>
                   <div class="user4">
@@ -383,10 +385,11 @@
                             <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                           </text>
                           <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle" num="47" time="10000">47%</tspan>   
+                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>   
                           </text>
                         </g>
                       </svg>
+                      <span class="js-counter">47%</span>
                     </div>
                   </div>
                   <div class="user5">
@@ -401,10 +404,11 @@
                             <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                           </text>
                           <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle" num="70" time="10000">70%</tspan>   
+                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>   
                           </text>
                         </g>
                       </svg>
+                      <span class="js-counter">70%</span>
                     </div>
                   </div>
                   <div class="user6">
@@ -419,10 +423,11 @@
                             <tspan  class="donut-data" x="50%" text-anchor="middle">정답률</tspan>   
                           </text>
                           <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle" num="85" time="10000"></tspan>   
+                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>   
                           </text>
                         </g>
                       </svg>
+                      <span class="js-counter">85%</span>
                     </div>
                   </div>
                 </div>
